# py-lib3mf

./: CMakeLists.txt  LICENSE-3RD-PARTY.txt  License.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: aarch64.yml  publish.yml  test-build123d-aarch64.yml  update.yml  wasm.yml
cmake/patches/: Lib3MF.py.patch  patch.cmake
py_lib3mf/: __init__.py
