cmake_minimum_required(VERSION 3.24)
project(${SKBUILD_PROJECT_NAME} LANGUAGES C CXX VERSION ${SKBUILD_PROJECT_VERSION})

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# --- Overload install command ---
function(install)
  if("${ARGV0}" STREQUAL "INSTALL_ME")
    list(SUBLIST ARGV 1 -1 rest_args)
    _install(${rest_args})
  else()
    message(STATUS "Skipping upstream install rule for: ${ARGV}")
  endif()
endfunction()

include(FetchContent)
Set(FETCHCONTENT_QUIET FALSE)

# --- 1. Fetch Lib3MF C++ Source ---
FetchContent_Declare(
  lib3mf
  GIT_REPOSITORY "https://github.com/3MFConsortium/lib3mf.git"
  GIT_TAG "v2.4.1"
  GIT_PROGRESS TRUE
  PATCH_COMMAND "${CMAKE_COMMAND}" "-DREAL_SOURCE_DIR=<SOURCE_DIR>" -P "${CMAKE_CURRENT_LIST_DIR}/cmake/patches/patch.cmake"
  OVERRIDE_FIND_PACKAGE
)

FetchContent_MakeAvailable(lib3mf)

# --- 2. WASM (Emscripten) Build Strategy ---
if(EMSCRIPTEN)
  message(STATUS "Configuring for Emscripten (WASM)...")

  FetchContent_Declare(
    lib3mf-wheel-original
    URL "https://github.com/3MFConsortium/lib3mf/releases/download/v2.4.1/lib3mf-2.4.1-py3-none-manylinux2014_x86_64.whl"
  )
  FetchContent_MakeAvailable(lib3mf-wheel-original)

  FetchContent_GetProperties(lib3mf lib3mf-wheel-original)
  set(WHEEL_CONTENTS_DIR "${CMAKE_CURRENT_BINARY_DIR}/lib3mf-wheel-contents")

  add_custom_command(
    DEPENDS lib3mf
    OUTPUT "${WHEEL_CONTENTS_DIR}"
    COMMAND ${CMAKE_COMMAND} -E make_directory "${WHEEL_CONTENTS_DIR}"
    COMMAND ${CMAKE_COMMAND} -E make_directory "${WHEEL_CONTENTS_DIR}/lib3mf"
    
    # Copy Python files from the official wheel
    COMMAND /bin/sh -c "cp '${lib3mf-wheel-original_SOURCE_DIR}/lib3mf/'*.py '${WHEEL_CONTENTS_DIR}/lib3mf/'"
    
    # Patch Python files for Emscripten
    COMMAND /bin/sh -c "sed -i 's/linux/emscripten/g;s/Linux/Emscripten/g' '${WHEEL_CONTENTS_DIR}/lib3mf/'*.py"
    COMMAND /bin/sh -c "patch -p1 '${WHEEL_CONTENTS_DIR}/lib3mf/Lib3MF.py' < '${CMAKE_CURRENT_LIST_DIR}/cmake/patches/Lib3MF.py.patch'"
    
    # Copy Compiled WASM
    COMMAND /bin/sh -c "cp '${lib3mf_BINARY_DIR}/lib3mf.so' '${WHEEL_CONTENTS_DIR}/lib3mf/lib3mf.so'"
    COMMAND /bin/sh -c "[ -f '${lib3mf_BINARY_DIR}/lib3mf.wasm.debug.wasm' ] && cp '${lib3mf_BINARY_DIR}/lib3mf.wasm.debug.wasm' '${WHEEL_CONTENTS_DIR}/lib3mf/lib3mf.wasm.debug.wasm' || true"
    
    # Overwrite __init__.py with our local version
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/py_lib3mf/__init__.py" "${WHEEL_CONTENTS_DIR}/lib3mf/__init__.py"
    
    VERBATIM
  )

  add_custom_target(lib3mf-wheel-target ALL DEPENDS "${WHEEL_CONTENTS_DIR}")
  
  install(INSTALL_ME DIRECTORY "${WHEEL_CONTENTS_DIR}/" DESTINATION ".")

# --- 3. Native / Aarch64 Build Strategy ---
else()
  message(STATUS "Configuring for Native/Aarch64...")

  # --- CRITICAL FIX: Disable Versioned Filenames ---
  # Clears VERSION/SOVERSION properties so we get "lib3mf.so" only,
  # instead of "lib3mf.so -> lib3mf.so.2 -> lib3mf.so.2.4.1"
  set_target_properties(lib3mf PROPERTIES VERSION "" SOVERSION "")

  # 1. Install the shared library to 'lib3mf'
  install(INSTALL_ME TARGETS lib3mf DESTINATION "lib3mf")

  # 2. Locate Lib3MF.py (Dynamic Search)
  set(LIB3MF_PY_LOCATIONS
    "${lib3mf_SOURCE_DIR}/Bindings/Python/Lib3MF.py"
    "${lib3mf_SOURCE_DIR}/Autogenerated/Bindings/Python/Lib3MF.py"
  )

  set(FOUND_LIB3MF_PY FALSE)
  foreach(LOC ${LIB3MF_PY_LOCATIONS})
    if(EXISTS "${LOC}")
      message(STATUS "Found Lib3MF.py at: ${LOC}")
      install(INSTALL_ME FILES "${LOC}" DESTINATION "lib3mf")
      set(FOUND_LIB3MF_PY TRUE)
      break()
    endif()
  endforeach()

  if(NOT FOUND_LIB3MF_PY)
    message(FATAL_ERROR "Could not find Lib3MF.py in source locations: ${LIB3MF_PY_LOCATIONS}")
  endif()
  
  # 3. Install our local __init__.py to 'lib3mf'
  install(
    INSTALL_ME 
    FILES "${CMAKE_CURRENT_SOURCE_DIR}/py_lib3mf/__init__.py"
    DESTINATION "lib3mf"
  )

endif()
