[build-system]
requires = [
    "setuptools>=45",
]

build-backend = "setuptools.build_meta"

[project]
name = "py-lib3mf"
version = "2.2.0"
description = "A python package for Lib3MF tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
