[build-system]
requires = ["scikit-build-core==0.11.6"]
build-backend = "scikit_build_core.build"

[project]
name = "py-lib3mf"
version = "2.4.1" # Upgraded to match lib3mf v2.4.1
description = "Python bindings for Lib3MF"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.scikit-build]
cmake.version = ">=3.24"
wheel.packages = ["py_lib3mf"] # Ensure it looks for the package here

# Pass flags to CMake
[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
